@@ -188,6 +188,13 @@ and <b>abort</b> execution and transaction and fail task.</p>
   <td width="10%" valign="top">No (default=true)</td>
 </tr>
 
+<tr>
+  <td width="12%" valign="top">rawblobs</td>
+  <td width="78%" valign="top">If true, will write raw streams rather than hex encoding when
+    printing BLOB results. <em>Since Ant 1.7.1</em>.</td>
+  <td width="10%" valign="top">No, default <em>false</em></td>
+</tr>
+
 </table>
 
 <h3>Parameters specified as nested elements</h3>
